# hacktheclone

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  database.db  pyproject.toml  requirements-dev.txt  requirements.txt
containers/machine_1/: app.py
containers/metasploitable/: Dockerfile  root.txt
src/: app.py  config.py  db.py  login.py  machine_controller.py  models.py  register.py  utils.py
src/client/: __init__.py  login.py  mainpage.py  register.py
test/: test_db.py
